# GRAPE

./: .gitattributes  .gitignore  .gitlab-ci.yml  .sdkmanrc  CITATION.cff  Readme.md  build.gradle.kts  build.xml  gradle.properties  mkdocs.yml  pyproject.toml  updatePlugins.xml
.mps/: .name  migration.xml  modules.xml
devkits/RML.all/: RML.all.devkit
docs/: index.md  install.md  start.md
docs/assets/: erd.ttl  getting_started_mappings.ttl  getting_started_out.ttl
languages/RML/: RML.mpl
languages/RML.FNML/: RML.FNML.mpl
languages/RML.FNML/models/: RML.FNML.actions.mps  RML.FNML.behavior.mps  RML.FNML.constraints.mps  RML.FNML.editor.mps  RML.FNML.param.mps  RML.FNML.structure.mps  RML.FNML.typesystem.mps
languages/RML.IO/: RML.IO.mpl
languages/Turtle/: Turtle.mpl
languages/Turtle.runtime/: Turtle.runtime.msd
parser/: TURTLE.tokens  TURTLEBaseListener.java  TURTLEBaseVisitor.java  TURTLELexer.java  TURTLEListener.java  TURTLEParser.java  TURTLEVisitor.java  Turtle.g4  Turtle.interp  TurtleBaseListener.java  TurtleLexer.interp  TurtleLexer.java  TurtleListener.java  TurtleParser.java
solutions/GRAPE.build/: GRAPE.build.msd
solutions/RML-editor-lang.build/: RML-editor-lang.build.msd
solutions/RMLEditor.build/: RMLEditor.build.msd
solutions/RMLPlugin/: RMLPlugin.msd
solutions/RmlEditorLang.build/: RmlEditorLang.build.msd
solutions/Sandbox/: Sandbox.msd
solutions/Turtle.external/: Turtle.external.msd
solutions/Turtle.parser/: Turtle.parser.msd
solutions/TurtlePlugin/: TurtlePlugin.msd
solutions/converter/: converter.msd
(+106 files in other folders)
