[tool.poetry]
name = "grape"
version = "0.1.0"
description = "GRAPE: Guiding RML Authoring with a Projectional Editor"
authors = ["Jakub Duchateau <jakub.duchateau@uliege.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.2"
mkdocs-video = "^1.5.0"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-graphviz = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
